SPRING DYNAMIC MODULES FRAMEWORK CHANGELOG
==========================================
http://www.springframework.org/osgi

Changes in version 1.2.0 RC1 (2009-xx-yy)
-----------------------------------------

General
* various documentation improvements and fixes
* upgraded to Felix 1.4.1
* upgraded to Knopflerfish 2.2.0

Package org.springframework.osgi.context
* improved proxying of classes that are boot delegated outside the OSGi environment
* error handling is delegated to the multicaster unless debug is on
* improved type filtering for tracked services 
* improved AbstractOsgiBundleApplicationContext to republish the context OSGi service during #refresh calls

Package org.springframework.osgi.extender
* added support for disabling the ApplicationContext error handler through extender configuration
* added support for install.context.error.handler property
* changed namespace handlers lifecycle to depend on bundle events STARTED/STOPPED instead of RESOLVED/UNRESOLVED

Package org.springframework.osgi.service
* removed deprecated retryTimes parameter in OsgiServiceProxyFactoryBean
* improved type filtering for tracked services
* fixed visibility issue when invoking non-public proxied methods 

Package org.springframework.osgi.service
* improved FelixOsgiPlatform to support API changes in Felix 1.4.x


Changes in version 1.2.0 M2 (2008-11-24)
----------------------------------------

General
* upgraded to Spring Framework 2.5.6
* raised required Spring Framework version to 2.5.6
* upgraded to Knopflerfish 2.1.1
* aligned bundle symbolic names to Spring convention (changed prefix org.springframework.bundle.osgi. to 
  org.springframework.osgi. )
* added support for compendium namespace (managed-service, config-properties)
* incremented version of spring-osgi.xsd and spring-osgi-compendium.xsd

Package org.springframework.osgi.context
* removed deprecated method AbstractDelegatedExecutionApplicationContext#getContextClassLoader