@@ -17,6 +17,7 @@
 package org.springframework.osgi.compendium.config;
 
 import java.io.IOException;
+import java.util.Dictionary;
 import java.util.Properties;
 
 import junit.framework.TestCase;
@@ -24,7 +25,9 @@ import junit.framework.TestCase;
 import org.easymock.MockControl;
 import org.osgi.framework.BundleContext;
 import org.osgi.framework.ServiceReference;
+import org.osgi.framework.ServiceRegistration;
 import org.osgi.service.cm.Configuration;
+import org.osgi.service.cm.ManagedService;
 import org.springframework.beans.factory.xml.XmlBeanDefinitionReader;
 import org.springframework.context.support.GenericApplicationContext;
 import org.springframework.core.io.ClassPathResource;
@@ -33,6 +36,7 @@ import org.springframework.osgi.compendium.internal.cm.ManagedServiceInstanceTra
 import org.springframework.osgi.compendium.internal.cm.UpdateStrategy;
 import org.springframework.osgi.context.support.BundleContextAwareProcessor;
 import org.springframework.osgi.mock.MockBundleContext;
+import org.springframework.osgi.mock.MockServiceRegistration;
 
 /**
  * @author Costin Leau
@@ -41,6 +45,8 @@ import org.springframework.osgi.mock.MockBundleContext;
 public class ManagedServiceTest extends TestCase {
 
 	private GenericApplicationContext appContext;
+	private int unregistrationCounter;
+	private int registrationCounter;
 
 
 	protected void setUp() throws Exception {
@@ -49,6 +55,9 @@ public class ManagedServiceTest extends TestCase {
 		final Configuration cfg = (Configuration) mc.getMock();
 		mc.expectAndReturn(cfg.getProperties(), new Properties());
 		mc.replay();
+
+		registrationCounter = 0;
+		unregistrationCounter = 0;
 
 		BundleContext bundleContext = new MockBundleContext() {
 
@@ -61,6 +70,21 @@ public class ManagedServiceTest extends TestCase {
 					}
 				};
 			}
+
+			public ServiceRegistration registerService(String[] clazzes, Object service, Dictionary properties) {
+				if (service instanceof ManagedService) {
+					registrationCounter++;
+					return new MockServiceRegistration(clazzes, properties) {
+
+						public void unregister() {
+							super.unregister();
+							unregistrationCounter++;
+						}
+					};
+				}
+				return super.registerService(clazzes, service, properties);
+			}
+
 		};
 
 		appContext = new GenericApplicationContext();
@@ -114,5 +138,12 @@ public class ManagedServiceTest extends TestCase {
 		assertEquals("bean-managed", TestUtils.getFieldValue(bpp, "pid"));
 		assertEquals("update", TestUtils.getFieldValue(bpp, "updateMethod"));
 		assertEquals(UpdateStrategy.BEAN_MANAGED, TestUtils.getFieldValue(bpp, "updateStrategy"));
+	}
+
+	public void testTrackingCleanup() throws Exception {
+		assertEquals(5, registrationCounter);
+		assertEquals(0, unregistrationCounter);
+		appContext.close();
+		assertEquals(5, unregistrationCounter);
 	}
 }
